add event streaming to module
